[UPDATE] add opacity & transform animation

--- a/style_css/chat.css
+++ b/style_css/chat.css
@@ -50,14 +50,23 @@ div {
 }
 
 .chat-container {
-  width: 390px;
+  width: 420px;
   height: 690px;
   background-color: #eee;
   position: fixed;
   border-radius: 16px;
   bottom: 100px;
   right: 30px;
-  display: none;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(20px);
+  transition: all 0.5s;
+}
+
+.chat-container.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
 }
 
 .chat-header {
@@ -85,6 +94,11 @@ div {
 .icon {
   border-radius: 100px;
   margin: auto;
+}
+
+.chat {
+  max-height: 580px;
+  overflow-y: auto;
 }
 
 .chatting-ai {
@@ -116,7 +130,7 @@ div {
 .user-chat {
   padding: 10px 15px;
   background-color: #0ea5e9;
-  max-width: 210px;
+  max-width: 230px;
   border-radius: 24px;
   color: white;
 }
