--- a/style_css/chat.scss
+++ b/style_css/chat.scss
@@ -1,14 +1,23 @@
 @use './basic';
 
 .chat-container {
-    width: 390px;
+    width: 420px;
     height: 690px;
     background-color: #eee;
     position: fixed;
     border-radius: 16px;
     bottom: 100px;
     right: 30px;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px);
+    transition: all 0.5s;
+}
+
+.chat-container.show {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0px);
 }
 
 .chat-header {
@@ -38,6 +47,11 @@
 .icon {
     border-radius: 100px;
     margin: auto;
+}
+
+.chat {
+    max-height: 580px;
+    overflow-y: auto;
 }
 
 
@@ -70,7 +84,7 @@
 .user-chat {
     padding: 10px 15px;
     background-color: #0ea5e9;
-    max-width: 210px;
+    max-width: 230px;
     border-radius: 24px;
     color: white;
 }
